<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_all"
        android:enabled="true"
        android:icon="@drawable/ic_view_list_white_48dp"
        android:title="@string/menu_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send"
        android:enabled="true"
        android:icon="@drawable/ic_arrow_right_bold_circle_outline_white_48dp"
        android:title="@string/menu_send"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_receive"
        android:enabled="true"
        android:icon="@drawable/ic_arrow_down_bold_box_outline_white_48dp"
        android:title="@string/menu_receive"
        app:showAsAction="ifRoom" />
</menu>